# Cognitive-Contact-Intelligence-A-Privacy-First-Local-AI-Framework

./: .gitignore  README.md  project.md  pyproject.toml
.streamlit/: config.toml
